# sbrs

./: Cargo.toml  README.md  dist-workspace.toml
.github/: copilot-instructions.md
.github/hooks/: cargo-check.json
.github/hooks/scripts/: cargo-check.py
.github/prompts/: add-keybinding.prompt.md
.github/skills/tui-widget/: SKILL.md
.github/workflows/: release.yml
src/: app_archive.rs  app_files.rs  app_git.rs  app_images.rs  app_input.rs  app_meta.rs  app_render_cache.rs  app_search.rs  app_sizes.rs  main.rs
src/integration/: app.rs  catalog.rs  mod.rs  probe.rs  rows.rs
src/ui/: cli.rs  dialogs.rs  icons.rs  list_render.rs  list_temperature.rs  mod.rs  panels.rs  search.rs  status.rs  tree.rs
src/util/: format.rs
