[package]
name = "sbrs"
version = "0.2.22"
edition = "2024"
description = "Shell Buddy (sb)"
repository = "https://github.com/hjelev/sbrs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
devicons = "0.1"
hostname = "0.4"
users = "0.11"


[profile.release]
opt-level = 'z'     # Optimize for size (use 's' for slightly faster/bigger)
lto = true          # Enable Link Time Optimization (huge help)
codegen-units = 1   # Reduces parallel builds to allow better optimization
panic = 'abort'     # Removes stack unwinding code (saves space)
strip = true        # Automatically removes debug symbols (the biggest saver!)

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
